# RGSEngine

./: .gitignore  LICENSE  README.md
RGSEngine/: CMakeLists.txt  imgui.ini  vcpkg.json
RGSEngine/src/: Application.cpp  Application.h  Component.h  ComponentCamera.h  ComponentMesh.h  ComponentTexture.h  ComponentTransform.h  Engine.cpp  GameObject.cpp  GameObject.h  Input.cpp  Input.h  LoadFiles.cpp  LoadFiles.h  Main.cpp  Module.h  ModuleEditor.cpp  ModuleEditor.h  ModuleScene.cpp  ModuleScene.h  Render.cpp  Render.h  SceneState.cpp  SceneState.h  Shader.cpp  Shader.h  Time.cpp  Time.h  UIDGenerator.h  Window.cpp  Window.h
